static/css/style.css
/* Reset and common styles */
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}

body,
h1,
h2,
h3,
p {
    margin: 0;
    padding: 0;
}

/* Heading and text styles */
h1, h2, h3, h4, h5, h6 {
    font-family: 'Crimson Text', serif;
    font-weight: 600;
    font-style: italic;
}

p, ul, ol, li {
    font-family: 'Courgette', cursive;
    font-weight: 400;
}

/* Body styles */
body {
    background-color: #222;
    color: #EEEBD0; /* Default text color */
    font-family: Arial, sans-serif;
}

.background-image {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url('https://res.cloudinary.com/db2fhoogx/image/upload/v1234567/homepage-background_q0ptxh.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
}

.content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    color: white;
}

.title {
    font-size: 3rem;
    margin-bottom: 20px;
}

.description {
    font-size: 1.5rem;
    margin-bottom: 30px;
    color: #EEEBD0;
}

.btn {
    display: inline-block;
    padding: 10px 20px;
    background-color: #ff5722;
    color: white;
    text-decoration: none;
    font-weight: bold;
    border-radius: 5px;
    transition: background-color 0.3s;
}

.btn:hover {
    background-color: #ff784e;
}

/* Navbar styles */
.navbar {
    background-color: #0B0B0B;
    color: #EEEBD0;
}

/* Navbar brand styles */
.navbar-brand {
    font-family: 'Dancing Script', cursive;
    font-weight: 700; /* Bold */
    --bs-navbar-brand-font-size: 35px;
}

.navbar-brand:hover {
    color: #CC2936;
}

.navbar-brand-home {
    font-family: 'Dancing Script', cursive;
    font-weight: 700;
    --bs-navbar-brand-font-size: 50px;
}

/* Navbar link styles */
.navbar-nav .nav-link {
    color: #EEEBD0;
    font-size: 20px;
    transition: color 0.3s; /* Add a smooth color transition */
}

/* Active and hover navbar link styles */
.navbar-nav .nav-link.active,
.navbar-nav .nav-link:hover {
    color: #CC2936;
}

/* Container styles */
.container {
    padding: 20px;
}

.container-home {
    position: relative; 
    z-index: 1000 !important;
    margin-left: 10px;
    font-size: 50px;
    padding: 10px;
}

/* Button styles */
.btn {
    background-color: #CC2936;
    color: #EEEBD0;
    border: none;
    padding: 10px 20px;
    cursor: pointer;
    transition: background-color 0.3s, color 0.3s;
}

.btn:hover {
    background-color: #EEEBD0;
    color: #CC2936;
}

/* Login Form */
#id_login, 
#id_password,
#id_username,
#id_password1,
#id_password2 {
    width: 100%;
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 16px;
    color: #333;
}

/* Form input styles */
input[type="text"],
input[type="email"],
textarea {
    width: 100%;
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid #EEEBD0;
    border-radius: 5px;
}

/* Form button styles */
.form-btn {
    background-color: #CC2936;
    color: #EEEBD0;
    border: none;
    padding: 10px 20px;
    cursor: pointer;
    transition: background-color 0.3s, color 0.3s;
}

.form-btn:hover {
    background-color: #EEEBD0;
    color: #CC2936;
}

/* Link styles */
a {
    color: #CC2936;
    text-decoration: none;
    transition: color 0.3s;
}

a:hover {
    color: #EEEBD0;
}

/* Image styles */
img {
    max-width: 100%;
    height: auto;
}

/* Menu heading styles */
.menu-heading {
    font-family: 'Crimson Text', serif;
    font-weight: 600;
    font-style: italic;
    color: #DC143C;
    font-size: 60px;
    margin: 20px auto;
}

/* Category heading styles */
.category-heading {
    font-family: 'Crimson Text', serif;
    font-weight: 600;
    font-style: italic;
    color: #D3D3D3;
    font-size: 35px;
    margin: 40px auto;
}

/* Card styles */
.card {
    text-align: left;
}

/* Dish checkbox styles */
.form-check-input {
    transform: scale(1.5);
    border: 2px solid #CC2936;
    border-radius: 3px;
}

/* Dish image styles */
.card-img-top {
    object-fit: cover;
    overflow: hidden; /* Hide overflowing content (if any) */
    float: left; /* Image on the left side */
    margin-right: 20px;
    height: 280px;
}

/* Dish title styles */
.card-title {
    font-family: 'Crimson Text', serif;
    font-weight: 600;
    font-size: 25px;
    font-style: italic;
    color: #0B0B0B;
    margin-bottom: 5px;
    text-align: center;
}

.card-heading {
    font-size: 30px;
}

/* Dish description styles */
.card-text {
    font-family: 'Courgette', cursive;
    font-weight: 400;
    font-size: 16px;
    color: #0B0B0B;
    margin: 0;
}

/* Dish price styles */
.price {
    font-family: 'Courgette', cursive;
    font-weight: bold;
    font-size: 20px;
    color: #CC2936;
}

/* Custom button styles */
#custom-btn {
    position: fixed;
    bottom: 10px;
    left: calc(50% - 125px); /* Adjust the left position to center horizontally */
    width: 250px; 
    height: 50px; 
    background-color: #CC2936; 
    color: #EEEBD0; 
    border: none;
    padding: 10px 20px;
    cursor: pointer;
    transition: background-color 0.3s, color 0.3s;
}

#custom-btn:hover {
    background-color: #EEEBD0; /* Change the background color on hover */
    color: #CC2936; /* Change the text color on hover */
}

.delivery-info {
    font-size: 18px; /* Adjust the font size as needed */
}

.card-container {
    height: 100%;
}

.card {
    height: 100%; /* Set a fixed height for the card */
}

.card img {
    max-height: 100%; /* Ensure the image scales proportionally within the card */
}

.card-text {
    flex-grow: 1; /* Allow text content to expand to fill available space */
    padding: 10px; /* Add padding for spacing within the card */
}

.card-body {
    flex: 0 auto;
}

/* Style for card content */
.card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%; /* Make the content fill the card height */
}

/* Adjust margins and padding for the card body */
.card-content .card-body {
    margin: 0;
    padding: 0;
}

/* Make the button align to the bottom of the card */
.card-content .text-center {
    margin-top: auto;
}

/* Add margin to the top of the button for spacing */
.card-content .text-center a.btn {
    margin-top: 10px;
}

.carousel-inner {
    padding: 1em;
}

.card {
    margin: 0 0.5em;
    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
    border: none;
}

.carousel-control-prev,
.carousel-control-next {
    background-color: #e1e1e1;
    width: 6vh;
    height: 6vh;
    border-radius: 50%;
    top: 50%;
    transform: translateY(-50%);
}

.card .img-wrapper {
    max-width: 100%;
    height: 13em;
    display: flex;
    justify-content: center;
    align-items: center;
}

.card img {
    max-height: 100%;
}

/* Footer styles */
.footer {
    background-color: #0B0B0B;
    color: #EEEBD0;
    padding: 30px 0;
}

.footer h3 {
    font-size: 24px;
    margin-bottom: 15px;
}

.footer p {
    font-size: 18px;
}

.social-icons {
    list-style: none;
    padding: 0;
}

.social-icons li {
    display: inline;
    margin-right: 20px;
}

.social-icons a {
    color: #CC2936;
    font-size: 24px;
    text-decoration: none;
    transition: color 0.3s;
}

.social-icons a:hover {
    color: #EEEBD0;
}

.text-left {
    text-align: left;
}

.text-right {
    text-align: right;
}

.wrapper {
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

.content-div {
    flex: 1;
}

/* Media Queries */
@media (min-width: 767px) {
    .carousel-item {
        margin-right: 0;
        flex: 0 0 33.333333%;
        display: block;
    }

    .carousel-inner {
        display: flex;
    }
}

@media (max-width: 767px) {
    .card .img-wrapper {
        height: 17em;
    }
}

@media (max-width: 767px) {
    /* Adjust footer padding for mobile screens */
    .footer {
        padding: 20px 0;
    }

    /* Center-align the footer content on mobile screens */
    .footer .container {
        text-align: center;
    }

    /* Reduce font sizes for mobile screens */
    .footer h3 {
        font-size: 18px;
        margin-bottom: 10px;
    }

    .footer p {
        font-size: 16px;
    }

    /* Adjust spacing for social icons on mobile screens */
    .footer .social-icons {
        margin-top: 10px;
    }

    .footer .social-icons li {
        margin-right: 10px;
    }

    .footer .social-icons a {
        font-size: 20px;
    }
}

